# MIRA

./: .gitignore  LICENSE  README.md  run_mira.sh
mira_dspy/: README.md  overrides.txt  pyproject.toml
mira_dspy/data/demo_processed/: admissions_summary.csv  summary.json
mira_dspy/data/demo_processed/records/: 20044587.json  20093566.json  20192635.json  20199380.json  20214994.json  20282368.json  20285402.json  20291550.json  20297618.json  20321825.json  20338077.json  20364112.json  20385771.json  20429160.json  20437651.json  20457729.json  20572787.json  20611640.json  20611796.json  20626031.json  (+255 more)
mira_dspy/data/demo_with_notes/: admissions_summary.csv  summary.json
mira_dspy/mira_dspy/: compilation.py  config.py  metrics.py  noise_mitigation.py  program.py  signatures.py  tools.py  trainset.py
mira_dspy/mira_dspy/runs/: compile_and_run.py
mira_dspy/scripts/: process_demo.py  process_demo_with_notes.py  run_demo_pipeline.py  test_e2e.py  test_with_demo.py  test_with_notes.py
src/: .env.example  README.md  assistants.py  code_maps.py  config.py  conv.py  fhir_handlers.py  fhir_observations.py  mimic_to_fhir.py  paths.py  pyproject.toml  qdrant_collection.py  routines.py  routines_optional_admission.py  tool_execs.py  tools.py  visualisations.py
src/MimicEnums/: BloodEnum.py  PeriodEnum.py  README.md  _60MicroBiologyEnum.py  __init__.py  make_enums_and_code_maps.py
src/backend/: README.md  fhir_client.py  fhir_setup.py  log.py
src/backend/hapi-fhir-server/: docker-compose.yml
src/codes/: README.md  medication_codes.py
src/codes/mappings/: medication_ndc_rxnorm_snomedct_atc.csv
src/dataset/: README.md  config.py  consort_tracker.py  data.py  discharge.py  extracters.py  formats.py  labs.py  make_admission_datasets.py  make_dataset.py  medication.py  microbiology.py  mimic_dataset.py  mimic_dataset_admission_experiments.py  procedures.py  radiology.py  utils.py  validators.py
src/evaluations/: README.md  eval_config.py  evaluate.py  evaluate_answer_consistency.ipynb  evaluations_HUMANS.ipynb  evaluations_MIRA.ipynb  objectives.py  preprocess.py  split_by_diagnosis.ipynb
src/notebooks/: README.md  build_procedure_db.ipynb  extract_pancreatic_cancer_info.ipynb
src/raw/: README.md
src/resources/: BIAS_DATASET_TO_HADM_IDS.json  README.md  medication_routes.csv
src/runs/: README.md  run.py  run_leakage_and_adversarial.ipynb  run_optional_admission.py  run_simulation.ipynb  run_simulation_bias.ipynb  run_simulation_optional_admission.ipynb  run_with_sex_bias.py
(+1123 files in other folders)
