[project]
name = "hospitalagent-src"
version = "0.1.0"
description = "MIRA core code and dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "about-time==4.2.1",
    "annotated-types==0.7.0",
    "colorama==0.4.6",
    "distro==1.9.0",
    "docker==7.1.0",
    "einops==0.8.0",
    "fastapi==0.115.4",
    "fhir-resources==7.1.0",
    "flask==3.1.0",
    "fsspec==2024.10.0",
    "graphviz==0.20.3",
    "grpcio==1.67.0",
    "grpcio-tools==1.67.0",
    "httpx==0.27.2",
    "huggingface-hub==0.26.0",
    "ipykernel==6.29.5",
    "jinja2==3.1.4",
    "markdown==3.7",
    "matplotlib==3.9.2",
    "networkx==3.4.1",
    "numpy==2.1.1",
    "openai==1.44.1",
    "orjson==3.10.11",
    "pillow==11.0.0",
    "qdrant-client==1.12.0",
    "requests==2.32.3",
    "seaborn==0.13.2",
    "tenacity==9.0.0",
    "termcolor==2.5.0",
    "tornado==6.4.1",
    "tqdm==4.66.5",
    "transformers==4.45.2",
    "urllib3==2.2.2",
    "uvicorn==0.32.0",
    "websockets==12.0",
    "werkzeug==3.1.3",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.4",
    "wheel>=0.45.1",
    "pyarrow>=20.0.0",
    "torch>=2.7.0",
    "pandas==2.2.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "tzdata>=2025.2",
    "alive-progress",
    "statsmodels>=0.14.4",
    "openpyxl>=3.1.5",
    "ipywidgets>=8.1.7",
    "scikit-learn>=1.7.1",
    "tabulate>=0.9.0",
    "wordcloud>=1.9.4",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "codes", "dataset", "MimicEnums", "runs", "evaluations"]
py-modules = [
    "assistants",
    "code_maps",
    "config",
    "conv",
    "fhir_handlers",
    "fhir_observations",
    "mimic_to_fhir",
    "paths",
    "qdrant_collection",
    "routines",
    "routines_optional_admission",
    "tool_execs",
    "tools",
    "visualisations",
]
